package structural.Decorator.BT2;

import java.util.List;

public interface Tokenize {
    List<String> tokenize();
}
